--- a/site/pages/css/cad_produtos.css
+++ b/site/pages/css/cad_produtos.css
@@ -8,7 +8,7 @@
 	}
 
 	body {
-		background-image: url("/eachphp/site/resources/bg.jpg");
+		background-image: url("../../resources/bg.jpg");
 		color: black;
 	}
 	.card{
