--- a/site/pages/css/login.css
+++ b/site/pages/css/login.css
@@ -11,7 +11,7 @@
 
 
   body {
-    background-image: url("/eachphp/site/resources/bg.jpg");
+    background-image: url("../../resources/bg.jpg");
   }
 
   .card{
