--- a/site/pages/css/sobre.css
+++ b/site/pages/css/sobre.css
@@ -20,7 +20,7 @@
 
 
   body {
-    background-image: url("/eachphp/site/resources/bg.jpg");
+    background-image: url("../../resources/bg.jpg");
   }
 
   .card{
